--- a/package.json
+++ b/package.json
@@ -7,17 +7,12 @@
     "start": "vite",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "server": "json-server server/db.json -p 5000",
-    "dev": "concurrently \"npm start\" \"npm run server\""
+    "eject": "react-scripts eject"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
     "@types/react-redux": "^7.1.33",
     "axios": "^1.6.8",
-    "concurrently": "^8.2.2",
-    "json-server": "^1.0.0-alpha.23",
-    "json-server-auth": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
